Added Google Colab Setup

--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -5,7 +5,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from google.colab import drive\n",
+    "import os\n",
+    "\n",
+    "# set path to project folder\n",
+    "gdrive_path='/content/gdrive/MyDrive/7-programming/music_recognition/'\n",
+    "\n",
+    "# mount Google Drive\n",
+    "drive.mount('/content/gdrive', force_remount=True)\n",
+    "\n",
+    "# navigate to Google Drive folder\n",
+    "os.chdir(gdrive_path)\n",
+    "\n",
+    "# check that we are in the right folder\n",
+    "print(sorted(os.listdir()))"
+   ]
   }
  ],
  "metadata": {
